@@ -23,6 +23,7 @@ Version 1.10.1+svn:
 	 
  * Whiteboard:
    * Fixed bug #19581: Leader can still move after a planned recall.
+   * Shortened all context menu items.
 
  * Miscellaneous and bug fixes:
    * Fixed bug #19505: broken stone bridge transitions.
