@@ -20,6 +20,7 @@ Version 1.10.1+svn:
      save a MP game due to a network or OOS error (bug #19562)
  * Whiteboard:
    * Fixed bug #19581: Leader can still move after a planned recall.
+   * Shortened all context menu items.
  * WML engine:
    * Fixed bug #19498: [modify_unit] duplicating units if x,y changed
  * Miscellaneous and bug fixes:
